--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,10 +62,10 @@ repos:
         entry: mypy
         language: python
         types: [python]
-        args: []
+        args: ["--config-file=pyproject.toml"]
         require_serial: true
         additional_dependencies: ["types-typed-ast"]
-        exclude: tests/testdata| # exclude everything, we're not ready
+        exclude: tests/testdata
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
     hooks:
