--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ always_false = [
 ]
 disallow_any_decorated = true
 disallow_any_explicit = true
+follow_imports = "silent"
 scripts_are_modules = true
 show_error_codes = true
 strict = true
