--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,14 +58,10 @@ repos:
     rev: v1.11.2
     hooks:
       - id: mypy
-        name: mypy
-        entry: mypy
         language: python
-        types: [python]
-        args: ["--config-file=pyproject.toml"]
+        pass_filenames: false
         require_serial: true
         additional_dependencies: ["types-typed-ast"]
-        exclude: tests/testdata
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
     hooks:
