--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,8 @@ ignore_missing_imports = true
 [tool.ruff]
 target-version = "py39"
 
+exclude = ["tests/testdata/"]
+
 # ruff is less lenient than pylint and does not make any exceptions
 # (for docstrings, strings and comments in particular).
 line-length = 110
