Fix additional mypy errors and expand CI checks to more files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,40 @@ filterwarnings = "error"
 [tool.mypy]
 python_version = "3.9"
 files = [
+    "astroid/_ast.py",
+    "astroid/_backport_stdlib_names.py",
+    "astroid/astroid_manager.py",
+    "astroid/brain/brain_crypt.py",
+    "astroid/brain/brain_ctypes.py",
+    "astroid/brain/brain_curses.py",
+    "astroid/brain/brain_datetime.py",
+    "astroid/brain/brain_dateutil.py",
+    "astroid/brain/brain_hashlib.py",
+    "astroid/brain/brain_http.py",
+    "astroid/brain/brain_hypothesis.py",
+    "astroid/brain/brain_numpy_core_einsumfunc.py",
+    "astroid/brain/brain_numpy_core_fromnumeric.py",
+    "astroid/brain/brain_numpy_core_function_base.py",
+    "astroid/brain/brain_numpy_core_multiarray.py",
+    "astroid/brain/brain_numpy_core_numeric.py",
+    "astroid/brain/brain_numpy_core_numerictypes.py",
+    "astroid/brain/brain_numpy_core_umath.py",
+    "astroid/brain/brain_numpy_ma.py",
+    "astroid/brain/brain_numpy_random_mtrand.py",
+    "astroid/brain/brain_pkg_resources.py",
+    "astroid/brain/brain_pytest.py",
+    "astroid/brain/brain_responses.py",
+    "astroid/brain/brain_scipy_signal.py",
+    "astroid/brain/brain_sqlalchemy.py",
+    "astroid/brain/brain_ssl.py",
+    "astroid/brain/brain_subprocess.py",
+    "astroid/brain/brain_threading.py",
+    "astroid/brain/brain_unittest.py",
+    "astroid/brain/brain_uuid.py",
+    "astroid/const.py",
     "astroid/interpreter/_import/",
+    "astroid/nodes/const.py",
+    "astroid/nodes/utils.py",
 ]
 always_false = [
     "PY310_PLUS",
