--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -6,8 +6,9 @@ on:
       - labeled
 
 permissions:
-  pull-requests: write
+  actions: write
   contents: write
+  pull-requests: write
 
 jobs:
   backport:
