--- a/tbump.toml
+++ b/tbump.toml
@@ -1,7 +1,7 @@
 github_url = "https://github.com/pylint-dev/astroid"
 
 [version]
-current = "4.0.0b2-dev0"
+current = "4.0.0b2"
 regex = '''
 ^(?P<major>0|[1-9]\d*)
 \.
