--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -28,11 +28,13 @@ jobs:
       - uses: actions/create-github-app-token@a8d616148505b5069dccd32f177bb87d7f39123b # v2.1.1
         id: app-token
         with:
-          app-id: ${{ vars.APP_ID }}
+          app-id: ${{ vars.BACKPORT_APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           permission-contents: write # push branch to Github
           permission-pull-requests: write # create PR / add comment for manual backport
           permission-workflows: write # modify files in .github/workflows
-      - uses: tibdex/backport@9565281eda0731b1d20c4025c43339fb0a23812e # v2.0.4
+      - uses: pylint-dev/backport@94367840595495e101f9a31415897c05da1f08d9 # v2.1.1
         with:
           github_token: ${{ steps.app-token.outputs.token }}
+          user_name: ${{ vars.BACKPORT_USER_NAME }}
+          user_email: ${{ vars.BACKPORT_USER_EMAIL }}
