--- a/.github/workflows/test-pylint.yml
+++ b/.github/workflows/test-pylint.yml
@@ -5,6 +5,6 @@ on:
 
 jobs:
   test-pylint-with-astroid-sha:
-    uses: pylint-dev/pylint/.github/workflows/tests.yaml
+    uses: pylint-dev/pylint/.github/workflows/tests.yaml@main
     with:
       astroid_sha: ${{ github.sha }}
