Add missing tag and param to test-pylint workflow (#2962)

--- a/.github/workflows/test-pylint.yml
+++ b/.github/workflows/test-pylint.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   test-pylint-with-astroid-sha:
-    uses: pylint-dev/pylint/.github/workflows/tests.yaml
+    uses: pylint-dev/pylint/.github/workflows/tests.yaml@main
     with:
+      repository: pylint-dev/pylint
       astroid_sha: ${{ github.sha }}
